--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spa-mern",
   "version": "1.0.0",
   "description": "Single Page Application in MERN stack",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/shuckin2017/mern-app/issues"
   },
-  "homepage": "https://github.com/shuckin2017/mern-app#readme"
+  "homepage": "https://github.com/shuckin2017/mern-app#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^6.2.0",
+    "config": "^3.3.6",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12"
+  }
 }
