--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm start\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gitAdd": "git add .",
+    "gitCommit": "git commit -m 'initel'",
+    "gitPush": "git push"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
     "concurrently": "^6.2.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12",
