--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
   },
   "homepage": "https://github.com/shuckin2017/mern-app#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "config": "^3.3.6",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.11"
   }
 }
